overflow fixed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -129,4 +129,6 @@
     bottom: 30px;
   }
 }
-
+body{
+  overflow: auto;
+}
